

=========================================
	Change Log
	2016 Softmodding Tool v1.0
	Created by Rocky5
=========================================


=========================================
	Update: Dec 23 2016
=========================================
		Fixed the list high for all the skins.
		Fixed the main skin files (A) Select background being off a little.
		Updated to the "2016 Softmod Tool Kit" tool. Now when Virtual EEPROM is enabled it will now display "V-EEPROM ENB" as the systems serial number.
		Updated the Virtual EEPROM settings menu:
			> You now cannot run the "Enable" option more than once, as the virtual eeprom is write protected until disabled and the system had restarted.
			> Disable now has a mandatory restart.
		

=========================================
	Update: Dec 22 2016
=========================================
		Moved to NKPatcher 11.UO5 ( My edit ) for the initial softmod.
		Streamlined the softmod save. ( moved stuff about and fixed all the configs and NKPatcher Settings to see the changes )
		Updated some of the batch files to use the new softmod layout.
		Updated all of the images for the skins, now smaller and look the same.
		Removed the 480p patch I had applied to UnleashX, wasn't working the way it should due to the TV switching to progressive.
		Added to the information button at the top NKPatcher Settings menu how to Exit NKPatcher Settings.
		Removed the videoset.db so now you have to set your screen position yourself.
		Other minor things, getting ready for release! ( Thank god! )

		
=========================================
	Update: Dec 21 2016
=========================================
		Reduced the file size a tad by moving a couple more files into the Files.rar
		Updated the ReadMe.txt with some info about NKPatcher.
		
		
=========================================
	Update: Dec 20 2016
=========================================